--- a/cool.html
+++ b/cool.html
@@ -55,11 +55,11 @@
       gap: 10px;
     }
     .predefined-buttons button {
-      padding: 10px 20px; /* Adjust padding to ensure buttons are wide based on text */
+      padding: 10px 20px;
       font-size: 16px;
       transition: transform 0.2s ease-in-out;
       width: auto;
-      white-space: nowrap; /* Prevent text from wrapping */
+      white-space: nowrap;
     }
     .predefined-buttons button:hover {
       transform: scale(1.1);
@@ -72,6 +72,7 @@
   <button id="openButton" onclick="openFullscreenIframe()" disabled>open</button>
 
   <div class="predefined-buttons">
+    <button onclick="pasteUrl('https://expert-space-giggle-447wvprg652wx.github.dev')">Linux</button>
     <button onclick="pasteUrl('coolmathgames.com')">Cool Math Games</button>
     <button onclick="pasteUrl('crazygames.com')">Crazy Games</button>
     <button onclick="pasteUrl('poki.com')">Poki</button>
