--- a/cool.html
+++ b/cool.html
@@ -72,7 +72,7 @@
   <button id="openButton" onclick="openFullscreenIframe()" disabled>open</button>
 
   <div class="predefined-buttons">
-    <button onclick="pasteUrl('https://expert-space-giggle-447wvprg652wx.github.dev')">Linux</button>
+    <button onclick="pasteUrl('youtube.com')">YouTube</button>
     <button onclick="pasteUrl('coolmathgames.com')">Cool Math Games</button>
     <button onclick="pasteUrl('crazygames.com')">Crazy Games</button>
     <button onclick="pasteUrl('poki.com')">Poki</button>
