--- a/cool.html
+++ b/cool.html
@@ -73,6 +73,7 @@
 
   <div class="predefined-buttons">
     <button onclick="pasteUrl('youtube.com')">YouTube</button>
+    <button onclick="pasteUrl('twitch.tv')">Twitch</button>
     <button onclick="pasteUrl('coolmathgames.com')">Cool Math Games</button>
     <button onclick="pasteUrl('crazygames.com')">Crazy Games</button>
     <button onclick="pasteUrl('poki.com')">Poki</button>
